Basically done now
Added support for arrays, undefined variables, should allow you to set values for previously undefined properties. So you can access all the values in a template even if your original object was defined without them

--- a/www/template/react-card.html
+++ b/www/template/react-card.html
@@ -10,3 +10,8 @@
 <script>
     console.log("Script loading works")
 </script>
+<style>
+    .panel-title {
+        background-color: red
+    }
+</style>
