--- a/www/template/bs-carousel-item.html
+++ b/www/template/bs-carousel-item.html
@@ -3,3 +3,9 @@
         alt="...">
     <slot></slot>
 </div>
+
+<div class="carousel-item active">
+    <img src="https://lawsonblake.com/content/images/size/w2000/2020/05/Learn-to-Code.jpg" class="d-block w-100"
+        alt="...">
+    <slot></slot>
+</div>
