--- a/www/template/bs-carousel-item.html
+++ b/www/template/bs-carousel-item.html
@@ -1,11 +1,5 @@
 <div class="carousel-item {{isActive}}">
-    <img src="https://lawsonblake.com/content/images/size/w2000/2020/05/Learn-to-Code.jpg" class="d-block w-100"
-        alt="...">
-    <slot></slot>
-</div>
-
-<div class="carousel-item active">
-    <img src="https://lawsonblake.com/content/images/size/w2000/2020/05/Learn-to-Code.jpg" class="d-block w-100"
-        alt="...">
+    <img src="https://wpengine.com/wp-content/uploads/2021/05/optimize-images-1024x681.jpg" class="d-block w-100"
+        alt="{{altText}}">
     <slot></slot>
 </div>
