--- a/www/template/bs-carousel-container.html
+++ b/www/template/bs-carousel-container.html
@@ -31,3 +31,14 @@
     one[0].appendChild(tempButton)
   };
 </script>
+<style>
+  /* Limit carousel height to 50vh for fullscreen or large screens */
+  .carousel,
+  .carousel-inner,
+  .carousel-item,
+  .carousel-item img {
+    max-height: 50vh;
+    height: 50vh;
+    object-fit: cover;
+  }
+</style>
