--- a/www/template/bs-carousel-item.html
+++ b/www/template/bs-carousel-item.html
@@ -1,5 +1,4 @@
 <div class="carousel-item {{isActive}}">
-    <img src="https://wpengine.com/wp-content/uploads/2021/05/optimize-images-1024x681.jpg" class="d-block w-100"
-        alt="{{altText}}">
+    <img src="/img/car.jpg" class="d-block w-100" alt="{{altText}}" loading="lazy">
     <slot></slot>
 </div>
